# pyagent-aps

./: .gitignore  01agent.py  02agent.ipynb  03agent.ipynb  Ragent.ipynb  __init__.py  aps.ipynb  aps_mcp_server.py  disposition.md  go.py  hindsightagent.py  mcp_agent.py  mcp_server.py  mcp_stdio_patch.py  monitor_opencode_with_logfire.py  observation_mission.md  opagent.py  orche.ipynb  p.md  pyagent.ipynb  pyproject.toml  pyrightconfig.json  reflct_mission.md  requirements.txt  retain_misson.md  zagent.py
.cursor/: mcp.json
aps/: .env.example  .gitignore  README.md  __init__.py  critical_issues_2026-03-29.md  pyproject.toml  skills-lock.json  store_memories.py
aps/.github/workflows/: ci.yml  release.yml
aps/.streamlit/: config.toml
aps/adapters/: __init__.py  base.py  database.py  file.py  parsers.py  rest.py
aps/agents/: __init__.py  adjuster.py  base.py  exception_handler.py  explainer.py  monitor.py  orchestrator.py  planner.py  scheduler.py  validator.py
aps/core/: __init__.py  config.py  database.py  logfire_setup.py  repository.py  state.py
aps/engine/: __init__.py  cache.py  cp_sat_solver.py  profiler.py  schedule_metrics.py  solver.py  whatif.py
aps/mcp/: __init__.py  registry.py  tools.py
aps/models/: __init__.py  calendar.py  constraint.py  machine.py  optimization.py  order.py  schedule.py
aps/realtime/: adjuster.py  monitor.py
aps/tests/: __init__.py  conftest.py  sample_scenario.py  test_adapters.py  test_adjuster.py  test_agents.py  test_base_agent.py  test_benchmark.py  test_constraints.py  test_cp_sat_solver.py  test_engine.py  test_exception_handler.py  test_mcp_registry.py  test_mcp_tools.py  test_models.py  test_monitor.py  test_orchestrator.py  test_realtime.py  test_realtime_full.py  test_schedule_edit.py  test_schedule_merge.py  test_scheduler_agent.py  test_solver.py  test_validator.py
aps/ui/: app.py  schedule_edit.py  schedule_merge.py  state.py  utils.py
(+35 files in other folders)
