[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyagent"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "e2b-code-interpreter>=1.0",
    "hindsight-pydantic-ai>=0.4",
    "mcp>=1.0",
    "pydantic-ai>=0.0.10",
    "python-dotenv>=1.0",
    "logfire>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["aps"]
