[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aps"
version = "0.1.0"
description = "Multi-Agent Advanced Planning and Scheduling System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-ai>=0.0.10",
    "hindsight-pydantic-ai>=0.4",
    "pydantic-settings>=2.0",
    "ortools>=9.8",
    "httpx>=0.25",
    "websockets>=12.0",
    "streamlit>=1.30",
    "plotly>=5.18",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "logfire>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build]
dev-mode-dirs = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=aps --cov-report=term-missing"

[tool.coverage.run]
source = ["aps"]
branch = true
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
